--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,16 @@ click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
 flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.14.0
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.30
+protobuf==3.20.1
 pyrsistent==0.18.1
 pytz==2022.2.1
 six==1.16.0
+SQLAlchemy==1.4.41
 Werkzeug==2.1.2
