--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,21 @@ click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
 flask-restx==0.5.1
+flask-sqlacodegen==1.1.8
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
+inflect==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.14.0
 MarkupSafe==2.1.1
 mysql-connector-python==8.0.30
+mysqlclient==2.1.1
 protobuf==3.20.1
+pydantic==1.10.2
 pyrsistent==0.18.1
 pytz==2022.2.1
 six==1.16.0
 SQLAlchemy==1.4.41
+typing_extensions==4.3.0
 Werkzeug==2.1.2
