--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 aniso8601==9.0.1
 attrs==22.1.0
+bcrypt==4.0.0
 click==8.1.3
 colorama==0.4.5
 Flask==2.1.2
+flask-bcrypt==1.0.1
 flask-restx==0.5.1
 flask-sqlacodegen==1.1.8
 Flask-SQLAlchemy==2.5.1
@@ -14,6 +16,8 @@ jsonschema==4.14.0
 MarkupSafe==2.1.1
 mysql-connector-python==8.0.30
 mysqlclient==2.1.1
+numpy==1.23.3
+pandas==1.4.4
 protobuf==3.20.1
 pydantic==1.10.2
 pyrsistent==0.18.1
